# antebellum

./: .gitignore  README.md  TODO.txt
Codigo/: CMakeLists.txt  main.cpp
Codigo/ASM/Conversion/: convcatena.asm  convfractio.asm
Codigo/ASM/IO/: iocatena.asm  iodiem.asm  iodualis.asm  iofractio.asm  ioimago.asm  ioliber.asm  ionumerus.asm
Etapa 1/Pruebas/: prueba1.str  prueba3.str  prueba4.str  prueba7.str  prueba8.str
Grafico y docu/: Lenguaje2019.xls
Grafico y docu/Automata/: Accesos-Asignación-Ids-Literal-Arreglo.fa  Comentarios-Comparaciones-Literales-Registros.fa  Cosas que agregar.xls  IDs.fa  Literales-Caracteres.fa  Literales-Enteros.fa  Literales-Strings.fa  Operaciones-Aritmeticas.fa  Operaciones-Caracteres-Strings.fa  PalabrasA.fa  PalabrasC.fa  PalabrasD.fa  PalabrasE.fa  PalabrasF.fa  PalabrasI.fa  PalabrasL-G-M-O.fa  PalabrasN-P.fa  PalabrasQ-R-S-T-U-V-X.fa
Grafico y docu/Elementos del lenguaje/: Elementos-del-lenguaje-Esquivel-Esteban-Garita-Alejandro.docx  Elementos-del-lenguaje-Esquivel-Esteban-Garita-Alejandro.xlsx  Familias-y-errores-del-lenguaje.xlsx
Grafico y docu/Entregados/: Lenguaje2019.xls  Precedencia-y-Elementos-Esquivel-Esteban-Garita-Alejandro.rar
Grafico y docu/Gramatica/: [OLD] Etapa-Cero-Gramatica-Esquivel-Esteban-Garita-Alejandro.xls
Grafico y docu/Tabla de precedencia/: Tabla-de-precedencia-Esquivel-Esteban-Garita-Alejandro.docx
Pruebas/: prueba2.str
Scanner/: CMakeLists.txt  colorTable.h  main.cpp
Scanner/Scanner/: Scanner.cpp  Scanner.h  estados.h  token.h
Scanner/TestFiles/: prueba5.txt  prueba6.txt  report.html  (+4 more)
(+31 files in other folders)
